RESOLVED FIXED234958
[GTK] REGRESSION: Kinetic scrolling via touch-screen behaves oddly
https://bugs.webkit.org/show_bug.cgi?id=234958
Summary [GTK] REGRESSION: Kinetic scrolling via touch-screen behaves oddly
Chris Lord
Reported 2022-01-07 08:04:45 PST
Given what the fix for this is, I'm not convinced this is a regression, but it has been reported as such so perhaps some other mechanism changed somewhere that caused this. At the moment, if you try to scroll via a touch-screen, the velocity with which the swipe happens is massively multiplied and in the wrong direction on the y axis.
Attachments
Patch (1.92 KB, patch)
2022-01-07 08:10 PST, Chris Lord
no flags
Chris Lord
Comment 1 2022-01-07 08:10:26 PST
EWS Watchlist
Comment 2 2022-01-07 08:11:20 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See https://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
EWS
Comment 3 2022-01-07 15:48:49 PST
Committed r287794 (245852@main): <https://commits.webkit.org/245852@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448592 [details].
Radar WebKit Bug Importer
Comment 4 2022-01-07 15:49:20 PST
Note You need to log in before you can comment on or make changes to this bug.