[GTK] REGRESSION: Kinetic scrolling via touch-screen behaves oddly https://bugs.webkit.org/show_bug.cgi?id=234958

Reviewed by Michael Catanzaro.

The swipe signal handler didn't take into account
Scrollbar::pixelsPerLineStep() and also incorrectly negated the
vertical velocity. Ideally, touch scrolling would use precise wheel
events, but as the rest of the code works correctly and scales by this
amount, make the one-line change that conforms with the previous code.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseTouchSwipe):



Canonical link: https://commits.webkit.org/245852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287794 268f45cc-cd09-0410-ab3c-d52691b4dbfc